task14/exam-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exam-app-ingress
  namespace: exam-26
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: doniyorbek.nvrbckdown.uz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: exam-app-svc
            port:
              number: 80
